// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChoiceInput> renders ChoiceInput correctly when passing options with ID 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group"
  >
    <div
      class="col-md-2"
    >
      <label
        aria-label="Some label"
        class="af-form__group-label"
        for="xxx_Yes"
      >
        Some label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="xxx_Yes"
          name="xxx"
          type="radio"
          value="true"
        />
        <label
          class="af-form__label"
          for="xxx_Yes"
        >
          <span
            class="af-form__description"
          >
            Yes
          </span>
        </label>
      </div>
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="xxx_No"
          name="xxx"
          type="radio"
          value="false"
        />
        <label
          class="af-form__label"
          for="xxx_No"
        >
          <span
            class="af-form__description"
          >
            No
          </span>
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ChoiceInput> renders ChoiceInput correctly when passing options without ID 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group"
  >
    <div
      class="col-md-2"
    >
      <label
        aria-label="Some label"
        class="af-form__group-label"
        for="1"
      >
        Some label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="1"
          name="xxx"
          type="radio"
          value="true"
        />
        <label
          class="af-form__label"
          for="1"
        >
          <span
            class="af-form__description"
          >
            Yes
          </span>
        </label>
      </div>
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="2"
          name="xxx"
          type="radio"
          value="false"
        />
        <label
          class="af-form__label"
          for="2"
        >
          <span
            class="af-form__description"
          >
            No
          </span>
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ChoiceInput> renders ChoiceInput correctly with default options 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group"
  >
    <div
      class="col-md-2"
    >
      <label
        aria-label="Some label"
        class="af-form__group-label"
        for="oui"
      >
        Some label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="oui"
          name="xxx"
          type="radio"
          value="true"
        />
        <label
          class="af-form__label"
          for="oui"
        >
          <span
            class="af-form__description"
          >
            Oui
          </span>
        </label>
      </div>
      <div
        class="af-form__radio-custom"
      >
        <input
          class="af-form__input-radio"
          id="non"
          name="xxx"
          type="radio"
          value="false"
        />
        <label
          class="af-form__label"
          for="non"
        >
          <span
            class="af-form__description"
          >
            Non
          </span>
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
